--- a/src/styles/components/header-menu/header-menu.mobile.css
+++ b/src/styles/components/header-menu/header-menu.mobile.css
@@ -17,8 +17,9 @@
   .HeaderMenu_overflow {
     position: absolute;
     z-index: -1;
+    right: 0;
+    /* width: calc(100vh * 16 / 9); */
 
-    width: calc(100vh * 16 / 9);
     height: 100vh;
 
     pointer-events: none;
